--- a/action.yml
+++ b/action.yml
@@ -551,7 +551,7 @@ runs:
         GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
       run: |
         options(crayon.enabled = TRUE)
-        if(!require("rworkflows", quietly=TRUE)) remotes::install_github("neurogenomics/rworkflows")
+        if(!require("rworkflows", quietly=TRUE)) remotes::install_github("HDash/rworkflows", ref = "temp-citeproc-fix")
         path <- rworkflows::use_dockerfile(base_image=Sys.getenv("BASE_IMAGE"))
       shell: Rscript {0} 
       
