--- a/action.yml
+++ b/action.yml
@@ -551,7 +551,8 @@ runs:
         GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
       run: |
         options(crayon.enabled = TRUE)
-        if(!require("rworkflows", quietly=TRUE)) remotes::install_github("HDash/rworkflows", ref = "temp-citeproc-fix")
+        remotes::install_github("HDash/rworkflows", ref = "temp-citeproc-fix", force = TRUE)
+        require(rworkflows)
         path <- rworkflows::use_dockerfile(base_image=Sys.getenv("BASE_IMAGE"))
       shell: Rscript {0} 
       
